@@ -18,6 +18,7 @@
 	  correct order
 	* support/regression/tests/gcc-torture-execute-20020328-1.c: renamed testit()
 	  to tryit() since the test prefix has special meaning in regression testing
+	* support/regression/tests/push_pop_sp.c: new, added
 
 2023-10-13 Philipp Klaus Krause <philipp@colecovision.eu>
 
